--- a/rakefile
+++ b/rakefile
@@ -1,6 +1,6 @@
 # -*-ruby-*-
 # $HeadURL$
-# Copyright (c) 2003-2007 Untangle, Inc. 
+# Copyright (c) 2003-2007 Untangle, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2,
@@ -64,3 +64,5 @@ task :javadoc do
               '-d', "#{BuildEnv::SRC.staging}/javadoc",
               '-subpackages', 'com.untangle', '-J-Xmx512m')
 end
+
+graphViz('foo.dot')
