debian/*init should not be removed IMHO
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@12456 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ clean:
 	@dh_testdir
 	@dh_testroot
 	@rm -f build-arch-stamp build-indep-stamp configure-stamp
-	@rm -f ./debian/*.init
+#	@rm -f ./debian/*.init
 	@dh_clean
 	rake clean
 
@@ -61,7 +61,7 @@ distclean:
 	@dh_testdir
 	@dh_testroot
 	@rm -f build-arch-stamp build-indep-stamp configure-stamp
-	@rm -f ./debian/*.init
+#	@rm -f ./debian/*.init
 	@dh_clean
 
 install: build
