--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -23,16 +23,17 @@ tarballs_gz=apache-ant-1.6.5.tar.gz commons-beanutils-1.7.0.tar.gz \
 	jcifs_1.2.9.tar.gz commons-fileupload-1.1.tar.gz commons-io-1.1.tar.gz \
 	commons-httpclient-3.0.tar.gz AjaxTK-3.1.1_GA_394-src.tar.gz \
 	commons-codec-1.3.tar.gz tightvnc-1.2.9_javabin.tar.gz \
-    je-3.2.13.tar.gz gettext-0.16.1.tar.gz
+    je-3.2.13.tar.gz
 
-tarballs_bz2=ant-contrib-1.0b2.tar.bz2 \
-	jaf-1.0.2.tar.bz2 jasperreports-1.1.1.tar.bz2 junit3.8.1.tar.bz2 junit4.1.tar.bz2  \
+tarballs_bz2=ant-contrib-1.0b2.tar.bz2 jaf-1.0.2.tar.bz2 \
+	jasperreports-1.1.1.tar.bz2 junit3.8.1.tar.bz2 junit4.1.tar.bz2  \
 	netbeans-3.5.tar.bz2 postgres-jdbc-7.4_215.tar.bz2 kunststoff-2_0_1.tar.bz2
 
 zips=ant-pack200.zip javamail-1_3_3_01.zip alloylnf-1_4_4-1.zip \
 	htmlparser1_6_20060319.zip wbemservices-1.0.2.src.zip
 
-jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar
+jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar \
+	gettext-commons-0.9.1.jar
 
 ## wbem needs ANT in order to compile
 wbemservices-1.0.2.src.zip: $(OUTPUT_DIRECTORY)/apache-ant-1.6.5
