Use \[\] and not \[\[\]\] for testing simple stuff, as this breaks on ubuntu.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@12730 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/rules
+++ b/debian/rules
@@ -96,7 +96,7 @@ binary-arch: install
 	@dh_installdeb
 #	@dh_perl
 	@for i in $(PACKAGES) ; do \
-	if [[ -f debian/version ]] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi \
+	if [ -f debian/version ] ; then dh_gencontrol -- -v"`cat debian/version`" ; else dh_gencontrol ; fi \
 	done
 	@dh_md5sums
 	@dh_builddeb --destdir=../ 2>&1 | egrep -v "(user-defined|ignoring)"
