--- a/debian/control
+++ b/debian/control
@@ -1123,7 +1123,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-iptables (>= 1.3.3), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image
+Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, untangle-iptables (>= 1.3.3), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, jruby-ut
 Recommends: untangle-appliance
 Provides: mvvm
 Conflicts: mvvm
