--- a/webfilter/servlets/webfilter/root/WEB-INF/web.xml
+++ b/webfilter/servlets/webfilter/root/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
  * $HeadURL$
- * Copyright (c) 2003-2007 Untangle, Inc. 
+ * Copyright (c) 2003-2007 Untangle, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License, version 2,
@@ -23,6 +23,17 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 <web-app>
   <display-name>WebFilter WebApp</display-name>
 
+  <servlet>
+    <servlet-name>UnblockerServlet</servlet-name>
+    <servlet-class>com.untangle.node.webfilter.UnblockerServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+ </servlet>
+
   @JSP_PRE_COMPILED_SERVLETS@
+
+  <servlet-mapping>
+    <servlet-name>UnblockerServlet</servlet-name>
+    <url-pattern>/unblock</url-pattern>
+  </servlet-mapping>
 
 </web-app>
