shlibs:Depends seems to pick up libnetfilter-queue1 as a versioned dep, so we list the C-libraries depends ourselves
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@12964 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: untangle-libuvmcore
 Architecture: i386
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, libc6 (>= 2.3.2), untangle-libnetfilter-queue0 (>= 0.0.15), libsysfs2, libxml2 (>= 2.6.29)
 XB-Display-Name: Untangle Core Library
 XB-Untangle-Type: library
 XB-Is-Service: true
