--- a/debian/control
+++ b/debian/control
@@ -207,7 +207,7 @@ Description: Spyware Blocker
 
 Package: untangle-node-webfilter
 Architecture: any
-Depends: untangle-vm, untangle-casing-http
+Depends: untangle-vm, untangle-casing-http, untangle-webfilter-init
 Conflicts: httpblocker-transform
 Provides: httpblocker-transform
 Replaces: httpblocker-transform
