qa component now gone, using internal instead
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@13472 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -705,7 +705,7 @@ Description: Phish Blocker
  The Phish Blocker product.
 
 Package: untangle-node-test
-Section: qa/net
+Section: internal/devel
 Architecture: any
 Depends: untangle-vm
 Conflicts: test-transform
