--- a/debian/control
+++ b/debian/control
@@ -1043,7 +1043,7 @@ Description: Spam Blocker Base
 
 Package: untangle-client
 Architecture: any
-Depends: sun-java5-jre
+Depends: sun-java5-jre | sun-java6-jre
 Provides: metavize-client
 Conflicts: metavize-client (<< 4.1)
 Replaces: metavize-client (<< 4.1)
@@ -1083,7 +1083,7 @@ Description: Untangle Client
 
 Package: untangle-libuvmthirdparty
 Architecture: any
-Depends: sun-java5-jre
+Depends: sun-java5-jre | sun-java6-jre
 Conflicts: mvvm (<< 5.0), libuvm-thirdparty, libmvvm-thirdparty
 Provides: libuvm-thirdparty
 Replaces: libuvm-thirdparty
@@ -1123,8 +1123,8 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: any
-Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), ddclient, untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, untangle-net-alpaca
-Recommends: untangle-appliance
+Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, untangle-net-alpaca
+Recommends: untangle-postgresql-config, untangle-appliance
 Provides: mvvm
 Conflicts: mvvm
 Replaces: mvvm
@@ -1164,7 +1164,7 @@ Description: Untangle Server
 
 Package: untangle-libuvm
 Architecture: any
-Depends: sun-java5-jre
+Depends: sun-java5-jre | sun-java6-jre
 XB-Display-Name: Untangle Server Libraries
 XB-Untangle-Type: library
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9Y
@@ -1201,6 +1201,6 @@ Description: Untangle Server Libraries
 
 Package: untangle-buildutil
 Architecture: any
-Depends: sun-java5-jre
+Depends: sun-java5-jre | sun-java6-jre
 Description: Untangle Server Build Utils
  The Untangle Build Utils.
