Web client prototype#3 - blingers and performance
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@14416 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/protofilter/webui/protofilter/root/WEB-INF/uvm.context.properties
+++ b/protofilter/webui/protofilter/root/WEB-INF/uvm.context.properties
@@ -1,5 +1,5 @@
 #loginType can be interactive | system
-uvm.context.loginType = interactive
+uvm.context.loginType = system
 uvm.context.timeout = 0
 
 #the next properties are needed only for interactive login
