--- a/uvm-lib/servlets/webui/root/WEB-INF/uvm.context.properties
+++ b/uvm-lib/servlets/webui/root/WEB-INF/uvm.context.properties
@@ -1,5 +1,5 @@
 #loginType can be interactive | system
-uvm.context.loginType = interactive
+uvm.context.loginType = system
 uvm.context.timeout = 0
 
 #the next properties are needed only for interactive login
