--- a/protofilter/webui/protofilter/root/WEB-INF/uvm.context.properties
+++ b/protofilter/webui/protofilter/root/WEB-INF/uvm.context.properties
@@ -1,5 +1,5 @@
-#loginType can be interactive | system
-uvm.context.loginType = system
+#loginType can be local | interactive | system
+uvm.context.loginType = local
 uvm.context.timeout = 0
 
 #the next properties are needed only for interactive login
