--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -21,6 +21,21 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
+
+  <servlet>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.jabsorb.UtJsonRpcServlet</servlet-class>
+    <init-param>
+      <param-name>gzip_threshold</param-name>
+      <param-value>200</param-value>
+    </init-param>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <url-pattern>/JSON-RPC</url-pattern>
+  </servlet-mapping>
+
   <welcome-file-list>
     <welcome-file>
       index.jsp
