--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -36,6 +36,16 @@
     <url-pattern>/JSON-RPC</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>ImageServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.servlet.ImageServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>ImageServlet</servlet-name>
+    <url-pattern>/image</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>
       index.jsp
