WebUI add i18n - in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@14695 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -42,6 +42,16 @@
     <url-pattern>/image</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>I18NServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.servlet.I18NServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>I18NServlet</servlet-name>
+    <url-pattern>/i18n</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>
       index.jsp
