Implementation for "browser cache version control" on upgrades
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@14774 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -29,7 +29,7 @@
     <servlet-class>com.untangle.uvm.webui.servlet.StartPageServlet</servlet-class>
     <init-param>
       <param-name>version</param-name>
-      <param-value>5</param-value>
+      <param-value>@VERSION@</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
