--- a/debian/control
+++ b/debian/control
@@ -51,7 +51,6 @@ Provides: ftp-casing
 Replaces: ftp-casing
 XB-Display-Name: File Transfer
 XB-Untangle-Type: casing
-XB-untangle-Jar-Prefix: untangle-casing-ftp
 XB-Is-Service: true
 Description: The Untangle File Transfer/FTP Decoder
  The Untangle File Transfer/FTP Decoder.
@@ -64,7 +63,6 @@ Provides: http-casing
 Replaces: http-casing
 XB-Display-Name: Web
 XB-Untangle-Type: casing
-XB-untangle-Jar-Prefix: untangle-casing-http
 XB-Is-Service: true
 Description: The Untangle Web Decoder
  The Untangle Web Decoder.
@@ -77,7 +75,6 @@ Provides: mail-casing
 Replaces: mail-casing
 XB-Display-Name: Email
 XB-Untangle-Type: casing
-XB-untangle-Jar-Prefix: untangle-casing-mail
 XB-Is-Service: true
 Description: The Untangle Email Decoder
  The Untangle Email Decoder.
@@ -90,7 +87,6 @@ Provides: airgap-transform
 Replaces: airgap-transform
 XB-Display-Name: Attack Blocker
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-shield
 XB-View-Position: 1010
 XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAJmklEQVRYhcWZWYwb
@@ -157,7 +153,6 @@ Provides: spyware-transform
 Replaces: spyware-transform
 XB-Display-Name: Spyware Blocker
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-spyware
 XB-View-Position: 20
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0RVh0
@@ -213,7 +208,6 @@ Provides: httpblocker-transform
 Replaces: httpblocker-transform
 XB-Display-Name: Web Filter
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-webfilter
 XB-View-Position: 30
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
@@ -282,7 +276,6 @@ Provides: clam-transform
 Replaces: clam-transform
 XB-Display-Name: Virus Blocker
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-clam
 XB-View-Position: 70
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
@@ -321,7 +314,6 @@ Provides: protofilter-transform
 Replaces: protofilter-transform
 XB-Display-Name: Protocol Control
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-protofilter
 XB-View-Position: 80
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
@@ -411,7 +403,6 @@ Provides: nat-transform
 Replaces: nat-transform
 XB-Display-Name: Router
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-router
 XB-View-Position: 1000
 XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -474,7 +465,6 @@ Provides: firewall-transform
 Replaces: firewall-transform
 XB-Display-Name: Firewall
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-firewall
 XB-View-Position: 90
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -530,7 +520,6 @@ Provides: spamassassin-transform
 Replaces: spamassassin-transform
 XB-Display-Name: Spam Blocker
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-spamassassin
 XB-View-Position: 15
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
@@ -614,7 +603,6 @@ Provides: clamphish-transform
 Replaces: clamphish-transform
 XB-Display-Name: Phish Blocker
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-phish
 XB-View-Position: 17
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -713,7 +701,6 @@ Provides: test-transform
 Replaces: test-transform
 XB-Display-Name: Test
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-test
 XB-View-Position: 2002
 XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -824,7 +811,6 @@ Provides: openvpn-transform
 Replaces: openvpn-transform
 XB-Display-Name: OpenVPN
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-openvpn
 XB-View-Position: 1003
 XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -897,7 +883,6 @@ Provides: ids-transform
 Replaces: ids-transform
 XB-Display-Name: Intrusion Prevention
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-ips
 XB-View-Position: 75
 XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
@@ -972,7 +957,6 @@ Provides: reporting-transform
 Replaces: reporting-transform
 XB-Display-Name: Untangle Reports
 XB-Untangle-Type: node
-XB-Untangle-Jar-Prefix: untangle-node-reporting
 XB-View-Position: 1020
 XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
@@ -1123,7 +1107,7 @@ Description: Untangle Server Thirdparty Libraries
 
 Package: untangle-vm
 Architecture: all
-Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, untangle-net-alpaca
+Depends: sun-java5-jre | sun-java6-jre, untangle-libuvm, untangle-libuvmcore, untangle-libuvmthirdparty, sudo, iptables (>= 1.3.6), untangle-libnfnetlink0, db4.2-util, untangle-ujac2pdf, at, ebtables, mime-support, untangle-nsis-addons, dnsmasq, pppoe, bridge-utils, iputils-ping, curl, wget, sg3-utils, pciutils, libdbd-pg-ruby, ruby, postgresql-client | postgresql-client-7.4 | postgresql-client-8.1 | postgresql-client-8.2, postgresql | postgresql-7.4 | postgresql-8.1 | postgresql-8.2, untangle-linux-image, mail-transport-agent, jruby1.0, libgettext-ruby, ethtool, net-tools, untangle-net-alpaca
 Recommends: untangle-postgresql-config, untangle-gateway-light
 Provides: mvvm
 Conflicts: mvvm, untangle-restore-tools (< 5.1)
