fix rake build, no more untangle-client package
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15219 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/rakefile
+++ b/rakefile
@@ -40,7 +40,7 @@ task :kindaclean do
   Rake::StampHash.instance.clear
 end
 
-task :build => [BuildEnv::SRC['untangle-vm'], BuildEnv::SRC['untangle-client'], BuildEnv::SRC['node']]
+task :build => [BuildEnv::SRC['untangle-vm'], BuildEnv::SRC['node']]
 
 task :devel => [BuildEnv::SRC['install'], BuildEnv::SRC.installTarget]
 
