--- a/uvm-lib/servlets/webui/root/build.properties
+++ b/uvm-lib/servlets/webui/root/build.properties
@@ -5,8 +5,8 @@ appserver.home=d:/untangle/apache-tomcat-6.0.14
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/lib
 
-deploy.path=Z:/work/src/dist/usr/share/untangle/web/webui
-#deploy.path=D:/untangle/deploy
+#deploy.path=Z:/work/src/dist/usr/share/untangle/web/webui
+deploy.path=X:/
 
 tomcat.manager.url=http://localhost:8080/manager
 tomcat.manager.username=tomcat
