--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -12,7 +12,7 @@
     <property name="name" value="webui"/>
 
     <target name="deployCurrent"  description="Deploy application">
-        <copy todir="${deploy.path}/script"  preservelastmodified="true" verbose="true">
+        <copy todir="${deploy.path}/script"  preservelastmodified="true" verbose="true" failonerror="false">
         	<fileset dir="./script/">
                 <include name="*.*"/>
             </fileset>
