WebFilter UI - in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15873 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -25,6 +25,9 @@
         	<fileset dir="./../../../../shield/hier/usr/share/untangle/web/webui/script/">
 				<include name="**/*.*"/>
         	</fileset>
+        	<fileset dir="./../../../../webfilter/hier/usr/share/untangle/web/webui/script/">
+				<include name="**/*.*"/>
+        	</fileset>
         </copy>
         <copy todir="${deploy.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./skins/">
