get jnlp.jar from downloads instead of from jdk as it isn't in the jdk on amd64
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@15913 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -34,7 +34,7 @@ zips=ant-pack200.zip javamail-1_3_3_01.zip alloylnf-1_4_4-1.zip \
 
 jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar \
 	gettext-commons-0.9.1.jar jruby-complete.jar properJavaRDP-1.1.jar \
-    java-getopt-1.0.12.jar
+    java-getopt-1.0.12.jar jnlp.jar
 
 ## wbem needs ANT in order to compile
 wbemservices-1.0.2.src.zip: $(OUTPUT_DIRECTORY)/apache-ant-1.6.5
