git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16092 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -14,7 +14,7 @@
     <target name="deployCurrent"  description="Deploy application">
         <copy todir="${deploy.path}/script"  preservelastmodified="true" verbose="true" failonerror="false">
         	<fileset dir="./script/">
-                <include name="*.*"/>
+                <include name="**/*.*"/>
             </fileset>
         	<fileset dir="./../../../../spyware/hier/usr/share/untangle/web/webui/script/">
 				<include name="**/*.*"/>
