Administration->Skins - in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16094 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -51,6 +51,16 @@
     <servlet-name>I18NServlet</servlet-name>
     <url-pattern>/i18n</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>UploadServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.servlet.UploadServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>UploadServlet</servlet-name>
+    <url-pattern>/upload</url-pattern>
+  </servlet-mapping>
   
   <welcome-file-list>
     <welcome-file>
