--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -28,6 +28,12 @@
         	<fileset dir="./../../../../webfilter/hier/usr/share/untangle/web/webui/script/">
 				<include name="**/*.*"/>
         	</fileset>
+            <fileset dir="./../../../../spamassassin/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
+            <fileset dir="./../../../../phish/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         </copy>
         <copy todir="${deploy.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./skins/">
