--- a/phish/servlets/idblocker/root/WEB-INF/web.xml
+++ b/phish/servlets/idblocker/root/WEB-INF/web.xml
@@ -24,12 +24,23 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
   <display-name>Phish WebApp</display-name>
 
   <servlet>
+    <servlet-name>BlockPageServlet</servlet-name>
+    <servlet-class>com.untangle.node.phish.BlockPageServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+ </servlet>
+
+  <servlet>
     <servlet-name>UnblockerServlet</servlet-name>
     <servlet-class>com.untangle.node.phish.UnblockerServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
  </servlet>
 
   @JSP_PRE_COMPILED_SERVLETS@
+
+  <servlet-mapping>
+    <servlet-name>BlockPageServlet</servlet-name>
+    <url-pattern>/blockpage</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>UnblockerServlet</servlet-name>
