--- a/webfilter/servlets/webfilter/root/WEB-INF/web.xml
+++ b/webfilter/servlets/webfilter/root/WEB-INF/web.xml
@@ -20,8 +20,14 @@
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+<web-app version="2.4">
   <display-name>WebFilter WebApp</display-name>
+
+  <servlet>
+    <servlet-name>BlockPageServlet</servlet-name>
+    <servlet-class>com.untangle.node.webfilter.BlockPageServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+ </servlet>
 
   <servlet>
     <servlet-name>UnblockerServlet</servlet-name>
@@ -30,6 +36,11 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  </servlet>
 
   @JSP_PRE_COMPILED_SERVLETS@
+
+  <servlet-mapping>
+    <servlet-name>BlockPageServlet</servlet-name>
+    <url-pattern>/blockpage</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>UnblockerServlet</servlet-name>
