--- a/mail-casing/servlets/quarantine/root/WEB-INF/web.xml
+++ b/mail-casing/servlets/quarantine/root/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <!--
  * $HeadURL$
  * Copyright (c) 2003-2007 Untangle, Inc. 
@@ -16,11 +16,11 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 -->
-<!DOCTYPE web-app
-PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-"http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version="2.4">
 
   <display-name>Quarantine Web App</display-name>
 
@@ -60,6 +60,16 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
     <load-on-startup>2</load-on-startup>
   </servlet>
 
+  <servlet>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <servlet-class>com.untangle.node.mail.web.euv.UtJsonRpcServlet</servlet-class>
+    <init-param>
+      <param-name>gzip_threshold</param-name>
+      <param-value>200</param-value>
+    </init-param>
+  </servlet>
+
+
   @JSP_PRE_COMPILED_SERVLETS@
 
   <servlet-mapping>
@@ -91,6 +101,11 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
   <welcome-file-list>
     <welcome-file>/index.jsp</welcome-file>
   </welcome-file-list>
+
+ <servlet-mapping>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <url-pattern>/JSON-RPC</url-pattern>
+  </servlet-mapping>
 
   <!--
       <servlet-mapping>
