--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -34,6 +34,9 @@
             <fileset dir="./../../../../phish/hier/usr/share/untangle/web/webui/script/">
                 <include name="**/*.*"/>
             </fileset>
+            <fileset dir="./../../../../clam/hier/usr/share/untangle/web/webui/script/">
+                <include name="**/*.*"/>
+            </fileset>
         </copy>
         <copy todir="${deploy.path}/skins"  preservelastmodified="true" verbose="true">
         	<fileset dir="./skins/">
