finalize Config > System > Backup
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16436 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -52,6 +52,16 @@
     <url-pattern>/upload</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>BackupServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.servlet.BackupServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>BackupServlet</servlet-name>
+    <url-pattern>/backup</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>
       index.jsp
