--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -30,7 +30,7 @@ tarballs_bz2=ant-contrib-1.0b2.tar.bz2 jaf-1.0.2.tar.bz2 \
 	netbeans-3.5.tar.bz2 postgres-jdbc-7.4_215.tar.bz2 kunststoff-2_0_1.tar.bz2
 
 zips=ant-pack200.zip javamail-1_3_3_01.zip alloylnf-1_4_4-1.zip \
-	htmlparser1_6_20060319.zip wbemservices-1.0.2.src.zip
+	htmlparser1_6_20060319.zip wbemservices-1.0.2.src.zip jabsorb-1.2.2-src.zip
 
 jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar \
 	gettext-commons-0.9.1.jar jruby-complete.jar properJavaRDP-1.1.jar \
