--- a/debian/control
+++ b/debian/control
@@ -81,7 +81,7 @@ Description: The Untangle Email Decoder
 
 Package: untangle-node-shield
 Architecture: all
-Depends: untangle-vm
+Depends: untangle-vm, untangle-shield
 Conflicts: airgap-transform
 Provides: airgap-transform
 Replaces: airgap-transform
