I18NServlet is alive...again
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16649 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/webui/root/WEB-INF/web.xml
@@ -57,6 +57,16 @@
     <servlet-class>com.untangle.uvm.webui.servlet.BackupServlet</servlet-class>
   </servlet>
   
+  <servlet>
+    <servlet-name>I18NServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.webui.servlet.I18NServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>I18NServlet</servlet-name>
+    <url-pattern>/i18n</url-pattern>
+  </servlet-mapping>
+  
   <servlet-mapping>
     <servlet-name>BackupServlet</servlet-name>
     <url-pattern>/backup</url-pattern>
