Updating the registration info, so it now works in the setup wizard, Starting on setting user passwords.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@16943 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/build.properties
+++ b/uvm-lib/servlets/webui/root/build.properties
@@ -5,7 +5,7 @@ appserver.home=d:/untangle/apache-tomcat-6.0.14
 # for Tomcat 6 use $appserver.home}/lib
 appserver.lib=${appserver.home}/lib
 
-deploy.path=Z:/work/src/dist/usr/share/untangle/web/webui
+deploy.path=../../../../dist/usr/share/untangle/web/webui
 #deploy.path=X:/
 
 tomcat.manager.url=http://localhost:8080/manager
