--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,6 @@ Architecture: i386 amd64
 Depends: ${misc:Depends}, libc6 (>= 2.3.2), untangle-libnetfilter-queue0 (>= 0.0.15), libsysfs1 | libsysfs2, libxml2 (>= 2.6.16), untangle-libnetfilter-conntrack1, untangle-libnfnetlink0
 XB-Display-Name: Untangle Core Library
 XB-Untangle-Type: library
-XB-Is-Service: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAIAAABKoV4MAAAABGdBTUEAANbY1E9Y
  MgAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAATkSURBVHja
  1JhrKG1bFMftg1semyghESVKSClSSilSinyQV5S8SoqUV5RIKSJFREJuiigRpZQS
@@ -51,7 +50,6 @@ Provides: ftp-casing
 Replaces: ftp-casing
 XB-Display-Name: File Transfer
 XB-Untangle-Type: casing
-XB-Is-Service: true
 Description: The Untangle File Transfer/FTP Decoder
  The Untangle File Transfer/FTP Decoder.
 
@@ -63,7 +61,6 @@ Provides: http-casing
 Replaces: http-casing
 XB-Display-Name: Web
 XB-Untangle-Type: casing
-XB-Is-Service: true
 Description: The Untangle Web Decoder
  The Untangle Web Decoder.
 
@@ -75,7 +72,6 @@ Provides: mail-casing
 Replaces: mail-casing
 XB-Display-Name: Email
 XB-Untangle-Type: casing
-XB-Is-Service: true
 Description: The Untangle Email Decoder
  The Untangle Email Decoder.
 
@@ -86,9 +82,8 @@ Conflicts: airgap-transform
 Provides: airgap-transform
 Replaces: airgap-transform
 XB-Display-Name: Attack Blocker
-XB-Untangle-Type: node
+XB-Untangle-Type: service
 XB-View-Position: 1010
-XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAJmklEQVRYhcWZWYwb
  dx3HPzOeGdtjj9f3epO92yRtjkZNQzehQlQoIkoQKlXzVCG1AgmekPoEqAJa8VAE
  T7xVFHiohBAPlVBVUYiIqlKpSUPTpE02x26O9XqT7K53be+uz/FcPHg9a6+97gYh
@@ -154,7 +149,6 @@ Replaces: spyware-transform
 XB-Display-Name: Spyware Blocker
 XB-Untangle-Type: node
 XB-View-Position: 20
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0RVh0
  U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAjsSURBVHjaxFlrTFXZFV5XQMEHTx0G0Qgj
  M1F81EeLwYhYpVLfj3RGRKODUUmDDdUZ08Zg/KGMiRlxnKYq0XS0+mcM6ojiFAXER3V4KCAUiENB
@@ -209,7 +203,6 @@ Replaces: httpblocker-transform
 XB-Display-Name: Web Filter
 XB-Untangle-Type: node
 XB-View-Position: 30
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
  RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAsLSURBVHjaxFkJbJzFFf7+3f33
  dnbX8fqI4+zGcUzI4VBEAJUS0yuElqJAQaW0BCQOqSUGFVG1QqC2RA1SS6W2qUhRkZAoLVS0
@@ -277,7 +270,6 @@ Replaces: clam-transform
 XB-Display-Name: Virus Blocker
 XB-Untangle-Type: node
 XB-View-Position: 70
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
  RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAATVSURBVHjazJhLbxxFEMerZ2Yd
  gx2/QTZBQr4TDlxyQZHhE0RBRL7hmxPFUk75BlyTG8opRw4+5hhFQlEUKUIRiMABCwNW4hC8
@@ -315,7 +307,6 @@ Replaces: protofilter-transform
 XB-Display-Name: Protocol Control
 XB-Untangle-Type: node
 XB-View-Position: 80
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
  RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAA+BSURBVHjalFkJlFTlmb3vvdp7
  qW56o1ma3qBRGhQzCiJijBEcPUlcIKPZZgYnQc1CxtHEHM/xzJmcGSee5MQzkrgwRDkh8ZzE
@@ -402,10 +393,10 @@ Conflicts: nat-transform
 Provides: nat-transform
 Replaces: nat-transform
 XB-Display-Name: Router
-XB-Untangle-Type: node
+XB-Untangle-Type: service
 XB-View-Position: 1000
-XB-Is-Core: true
 XB-Auto-Start: true
+XB-Invisible: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAAJu0lEQVR42syYeYxV9RXHP/dtM29W3rDMDFBgKsoigywKLggaRdkCQWmkYgtd
@@ -467,7 +458,6 @@ Replaces: firewall-transform
 XB-Display-Name: Firewall
 XB-Untangle-Type: node
 XB-View-Position: 90
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAANjr9RwUqgAAACBjSFJNAABtmAAAc44AAPJxAACDbAAAg7sAANTIAAAx7AAA
  GbyeiMU/AAAIM0lEQVR42syZfWxdZR3HP895u70vfYWta2dbAt0rWxkTBTYRAUEZf0BiBHRg
@@ -522,7 +512,6 @@ Replaces: spamassassin-transform
 XB-Display-Name: Spam Blocker
 XB-Untangle-Type: node
 XB-View-Position: 15
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
  RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAA5RSURBVHjaxFlrjB3nWX7mzPXM
  uezl7P1ue7277m5ubokS2U2cEmgqBAhQFEVqRaiEgPKjQqICREH5Q0UlaBsB4QeootAKpWol
@@ -605,7 +594,6 @@ Replaces: clamphish-transform
 XB-Display-Name: Phish Blocker
 XB-Untangle-Type: node
 XB-View-Position: 17
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAARDElEQVR42ryZaZCV1Z3Gf+fd7n779srtne6G7gYamk0QlAgijpqQTcxmEhJn
@@ -703,7 +691,6 @@ Replaces: test-transform
 XB-Display-Name: Test
 XB-Untangle-Type: node
 XB-View-Position: 2002
-XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAATyklEQVR42oyZe5RdVZ3nP/s877vurXdVUpVK5R3IgyQkwUgHGGiglYFuXT5Q
@@ -813,7 +800,6 @@ Replaces: openvpn-transform
 XB-Display-Name: OpenVPN
 XB-Untangle-Type: node
 XB-View-Position: 1003
-XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAAL2ElEQVR42syYWWxc132Hv7vMypnhkJwZigpD2iRNOaSsxdqAWo3jGk7qJXYB
@@ -885,7 +871,6 @@ Replaces: ids-transform
 XB-Display-Name: Intrusion Prevention
 XB-Untangle-Type: node
 XB-View-Position: 75
-XB-Is-Security: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAAMVElEQVR42qyZzY9k51XGf+e87/2oj67q7rEzH/bE8dhE+TAmikeAEzaw9F/g
@@ -957,9 +942,8 @@ Conflicts: reporting-transform
 Provides: reporting-transform
 Replaces: reporting-transform
 XB-Display-Name: Untangle Reports
-XB-Untangle-Type: node
+XB-Untangle-Type: service
 XB-View-Position: 1020
-XB-Is-Core: true
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0
  RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAgkSURBVHjazFlJb5vHGX5mvo2k
  xEWyJceSYwtIaimwE8WOqzhpjCbNIUVTGO2lMHJ00fbSU09FUaC9BDn20nsu/QMukkPjtDFa
