--- a/uvm-lib/servlets/webui/root/build.properties
+++ b/uvm-lib/servlets/webui/root/build.properties
@@ -1,15 +1,5 @@
-# Ant properties for building the springapp
+# Ant properties for building
 
-appserver.home=d:/untangle/apache-tomcat-6.0.14
-# for Tomcat 5 use $appserver.home}/server/lib
-# for Tomcat 6 use $appserver.home}/lib
-appserver.lib=${appserver.home}/lib
-
-deploy.path=../../../../dist/usr/share/untangle/web/webui
+#deploy.path=../../../../dist/usr/share/untangle/web/webui
+deploy.path=Z:/work/src/dist/usr/share/untangle/web/webui
 #deploy.path=X:/
-
-tomcat.manager.url=http://localhost:8080/manager
-tomcat.manager.username=tomcat
-tomcat.manager.password=password
-
-uvm.root=D:/untangle/dist
