--- a/uvm-lib/servlets/webui/root/build.xml
+++ b/uvm-lib/servlets/webui/root/build.xml
@@ -54,6 +54,18 @@
                 <include name="*.*"/>
             </fileset>
         </copy>
+
+        <copy todir="${deploy.path}/../ROOT"  preservelastmodified="true" verbose="true">
+        	<fileset dir="../../ROOT/root/">
+                <include name="*.*"/>
+            </fileset>
+        </copy>
+
+        <copy todir="${deploy.path}/../quarantine" preservelastmodified="true" verbose="true" failonerror="false">
+          <fileset dir="./../../../../mail-casing/servlets/quarantine/root/">
+            <include name="**/*.*"/>
+          </fileset>
+        </copy>
     </target>
 	
 
